Fixed bug #79987 (Memory leak in SplFileInfo because of missing zend_restore_error_handling())